Fix/margin office locations (#76)
* fix: make circle follow img corner in all resolutions

* fix: adjust margin in locations, update copy in overlapping elements

* style: add page reload-link to footer logo

--- a/styles/includes/_locations.scss
+++ b/styles/includes/_locations.scss
@@ -147,8 +147,6 @@
 			justify-content: space-between;
 
 			address {
-				@include spacing-300(margin-bottom);
-
 				font-style: normal;
 			}
 
@@ -159,9 +157,9 @@
 				text-transform: none;
 			}
 
-			span {
+			&--name {
 				@include label-200();
-				@include spacing-400(margin-bottom);
+				@include spacing-100(margin-bottom);
 			}
 		}
 	}
